Add delete user timelines functionality
